--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="google-site-verification" content="XxuHCpuRQFbAnrVBbMiEqEwXzfIIYSo1iwC9dfa5RXo" />
     <meta name="robots" content="index, follow" />
     <meta name="googlebot" content="all" />
     <meta name="bingbot" content="all" />
